--- a/nah/src/main/webapp/chp0/resource/style.css
+++ b/nah/src/main/webapp/chp0/resource/style.css
@@ -2,7 +2,16 @@ BODY {
 	FONT-SIZE: 9pt;
 	COLOR: black;
 	LINE-HEIGHT: 160%;
-	FONT-FAMILY: 굴림, verdana, tahoma
+	FONT-FAMILY: 굴림, verdana, tahoma;
+	
+	margin: 0;
+    padding: 0;
+    overflow: hidden;
+    display: flex;
+    justify-content: center;
+    align-items:flex-start;
+    min-height: 100vh;
+	
 }
 
 TD {
@@ -70,3 +79,11 @@ A:visited {
 	text-decoration: none;
 	color: #330066
 }
+   
+  /* 메인페이지 이미지 */
+  
+  .main-image {
+    max-width: 100%;
+    max-height: 100%;
+    object-fit: cover;
+} 
